# spreadsheet-dl

./: .editorconfig  .gitattributes  .gitignore  .lycheeignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .shellcheckrc  .yamllint.yaml  BRANDING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRE_RELEASE_CHECKLIST.md  PUBLISHING.md  README.md  SECURITY.md  TESTING.md  active_work.json  air_quality.ods  bridge_loads.ods  coverage.json  cspell.json  experiments.ods  gradebook.ods  mkdocs.yml  production_schedule.ods  protocol.ods  pyproject.toml  stress_analysis.ods  widget_bom.ods
.claude/: README.md  agent-registry.json  orchestration-config.yaml  paths.yaml  project-metadata.yaml  settings.json  settings_strict_quality.json  workflow-progress.json
.claude/agents/: git-commit-manager.md  git_commit_manager.md  orchestrator.md  spec_implementer.md  spec_validator.md
.claude/commands/: ai.md  git.md  implement.md  spec.md  swarm.md
.claude/hooks/: .context_state.json  ACTIVATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  README.md  README_QUALITY_ENFORCEMENT.md  archive_old_checkpoints.py  auto_format.py  auto_validate.py  check_context_usage.sh  check_dependencies.sh  check_not_implemented.sh  check_report_proliferation.py  check_stop.py  check_subagent_stop.py  checkpoint_state.sh  cleanup_completed_workflows.sh  cleanup_stale_agents.py  cleanup_stale_files.py  enforce_agent_limit.py  generate_settings.py  init_agent_registry.sh  lint_todos.py  manage_agent_registry.py  orchestration-metrics.json  post_compact_recovery.sh  pre_commit_config_validate.sh  pre_commit_version_check.sh  pre_compact_cleanup.sh  python_quality_enforce.py  python_type_check.py  quality_enforce_strict.py  restore_checkpoint.sh  rotate_logs.sh  session_cleanup.sh  stress_test_suite.py  test_context_management.sh  test_hooks.py  test_post_compact_recovery.sh  test_quality_enforcement.py  validate_config_consistency.py  (+4 more)
.claude/templates/: docstring.md
.cspell/: .cache
.github/workflows/: ci.yml  docs.yml  security.yml
contrib/claude-config/: README.md
docs/: API_DOCUMENTATION_STATUS.md  ARCHITECTURE.md  BRANDING.md  MCP_INTEGRATION.md  best-practices.md  cli.md  error-codes.md  getting-started.md  index.md  installation.md  mcp-tools-extended.md  plugins.md  testing-markers.md  user-guide.md
docs/api/: README.md  STATUS_UPDATE.md  SUMMARY.md  accounts.md  adapters.md  ai_export.md  ai_training.md  backup.md  bank_formats.md  builder.md  categories.md  charts.md  cli.md  completions.md  config.md  currency.md  domain-plugins.md  exceptions.md  export.md  index.md  interactive.md  mcp_server.md  notifications.md  ods_editor.md  ods_generator.md  performance.md  plaid_integration.md  plugins.md  progress.md  renderer.md  security.md  serialization.md  streaming.md  template_engine.md  templates.md  visualization.md  webdav_upload.md
docs/architecture/: modular-structure.md
docs/design/: index.md  plugin-signature-verification.md
docs/examples/: gallery.md  index.md
docs/guides/: best-practices.md  builders.md  cookbook.md  integration.md  migration-guide.md  performance.md  plugin-development.md  style-composition.md  template-creation.md  theme-creation.md  troubleshooting.md
docs/requirements/: SUMMARY.md  comprehensive-requirements.md  dual-audience-requirements.md  professional-spreadsheet-requirements.md  validation-report.md
docs/tutorials/: 01-create-budget.md  02-track-expenses.md  03-import-bank-data.md  04-create-reports.md  05-use-mcp-tools.md  06-customize-themes.md  07-html-import.md  08-conditional-formatting.md  09-sparklines.md
docs/v4.0/: GAP-ANALYSIS.md  ROADMAP.md
examples/: README.md  analyze_budget.py  chart_builder_advanced.py  create_budget.py  example_budget.py  example_chart.py  example_import.py  example_mcp.py  example_plugin.py  example_report.py  finance-tracker.example.yaml  generate_report.py  mcp_server_usage.py  realistic_budget_workflow.py  template_engine_usage.py
examples/01_basics/: 02_create_custom_budget.py  README.md
examples/02_formulas/: 01_analyze_budget.py  02_generate_reports.py
examples/03_charts/: 02_chart_builder_advanced.py  04_sparklines.py
examples/04_advanced/: 03_mcp_server_usage.py
scripts/: README.md  add_pytest_markers.py  audit_scripts.sh  check.sh  check_dependencies.sh  clean.sh  cleanup-for-release.sh  cleanup.sh  cleanup_requirement_ids.sh  docs.sh  doctor.sh  fix.sh  fix_missing_pytest_imports.py  format.sh  format_markdown.sh  gen_ref_pages.py  generate_tree.sh  git_reset_clean_all.sh  git_reset_preserve_ignored.sh  install_extensions.sh  lint.sh  prepare-public-release.sh  resume_claude_sessions_vscode.sh  setup-claude-config.sh  setup.sh  test-stats.sh  test_integration.sh  validate.sh  validate_formulas.py  validate_tools.sh  validate_vscode.sh
scripts/git/: git_sync.sh
scripts/lib/: common.sh
scripts/maintenance/: archive_coordination.sh  batch_file_processor.py  context_optimizer.py  json_summarizer.py  scheduled_quality_check.sh
scripts/search/: pdf_tools.sh  search.sh  test_search_tools.sh
scripts/tools/: check_links.sh  jsonc.sh  markdownlint.sh  mermaid.sh  mypy.sh  plantuml.sh  (+7 more)
templates/: .gitkeep
tests/: README.md  __init__.py  conftest.py  test_accounts.py  test_adapters.py  test_ai_export.py  test_ai_training.py  test_alerts.py  test_analytics.py  test_backup.py  test_backward_compatibility.py  test_bank_formats.py  test_budget_analyzer.py  test_builder.py  test_builders.py  test_categories.py  test_charts.py  test_cli.py  test_cli_commands_comprehensive.py  test_cli_commands_core.py  test_cli_commands_data_mgmt.py  test_cli_commands_part2.py  test_cli_commands_part3.py  test_cli_themes.py  test_completions.py  test_conditional_formatting.py  test_config.py  test_csv_import.py  test_currency.py  test_exceptions.py  test_export.py  test_financial_templates.py  test_goals.py  test_html_import.py  test_integration.py  test_interactive.py  test_mcp_server.py  test_mcp_tools_extended.py  test_notifications.py  test_ods_editor.py  (+25 more)
(+498 files in other folders)
