[project]
name = "spreadsheet-dl"
version = "4.0.0"
description = "The Spreadsheet Definition Language for Python - declarative API, multi-format export, domain templates, native MCP server"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "lair-click-bats" }]
keywords = [
    "spreadsheet",
    "definition-language",
    "declarative",
    "ods",
    "xlsx",
    "pdf",
    "mcp",
    "llm",
    "claude",
    "yaml",
    "template",
    "builder",
    "finance",
    "science",
    "engineering",
    "data-science",
    "formula",
    "chart",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

dependencies = [
    "odfpy>=1.4.1",
    "pandas>=2.1.0",
    "pyexcel-ods3>=0.6.1",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]
export = [
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]
config = [
    "pyyaml>=6.0.0",
]
visualization = [
    # Chart.js is loaded via CDN, no Python dependencies needed
]
notifications = [
    # Email via smtplib (stdlib), ntfy.sh via urllib (stdlib)
    # No additional dependencies needed
]
plaid = [
    # Plaid API integration (sandbox mode works without plaid-python)
    # For production, install: plaid-python>=14.0.0
]
mcp = [
    # MCP server uses stdlib only (json, logging, sys)
    # No additional dependencies needed
]
all = [
    "spreadsheet-dl[export,config]",
]

[project.scripts]
spreadsheet-dl = "spreadsheet_dl.cli:main"
spreadsheet-dl-mcp = "spreadsheet_dl.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spreadsheet_dl"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["spreadsheet_dl"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "odf.*",
    "pyexcel_ods3.*",
    "openpyxl.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -v"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
